Compila pero no funciona

--- a/Practica_04/Makefile
+++ b/Practica_04/Makefile
@@ -2,7 +2,7 @@ run: salida
 		./salida
 salida: lex.yy.c y.tab.c
 		gcc lex.yy.c y.tab.c -o salida -ly -ll -lm
-instrucciones.tab.c:
+y.tab.c:
 		yacc -d instrucciones.y
 lex.yy.c:
 		flex instrucciones.l
